Migrate to Liquibase 4 / picocli 4